k3s/vaultwarden/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: security
  labels:
    app: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate # Better for SQLite/Single file config
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: websocket
              containerPort: 3012
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - mountPath: /data/
              name: data-vol
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: data-vol
          hostPath:
            path: /opt/k3s-data/vaultwarden
            type: DirectoryOrCreate
