k3s/vaultwarden/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
  namespace: security
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: websocket
      port: 3012
      targetPort: 3012
